[package]
description = "implementation of rescue hash"
license = "MIT/Apache-2.0"
name = "rescue"
#repository = "https://github.com/matter-labs/sapling-crypto"
version = "0.0.1"

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = ["multicore"]
multicore = ["bellman_ce/multicore"]
 
[dependencies]
rand = "0.4"
digest = "0.7"
byteorder = "1"
serde = "1.0.80"
serde_derive = "1.0.80"
tiny-keccak = "1.4.2"
rust-crypto = "0.2"
num-bigint = "0.2"
bit-vec = "0.6"
franklin-crypto = {path = "franklin-crypto"}
bellman_ce = { version = "=0.3.0", default-features = false}
blake2-rfc_bellman_edition = "0.0.1"

[dev-dependencies]
hex-literal = "0.1"

